------------------------------------------------------------------------
r1213 | gaser | 2017-11-10 16:10:44

Changed paths:
M       CHANGES.txt
M       cat_main_registration.m
M       cat_stat_analyze_ROIs.m
M       cat_surf_createCS.m

(1) Fixed: Removed debugging code that caused crash.
(2) Changed: Added faster option for CAT_Surf2Sphere in cat_surf_createCS.m
------------------------------------------------------------------------
r1212 | dahnke | 2017-11-10 13:39:37 +0100 (Fr, 10 Nov 2017) | 45 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_tools.m
M       cat_io_FreeSurfer.m
M       cat_io_cmd.m
M       cat_io_xml.m
M       cat_main.m
M       cat_main_registration.m
M       cat_run.m
M       cat_run_job.m
M       cat_run_job1070.m
M       cat_run_job_APP_SPM.m
M       cat_surf_avg.m
M       cat_surf_createCS.m
M       cat_surf_render2.m
M       cat_vol_resize.m
M       cat_vol_sanlm.m
M       cat_vol_smooth3X.m
M       cat_vol_urqio.m
M       html/images/cat_tst_reg_boxplot.png
M       html/images/cat_tst_seg_bwp_ana.png
M       internal/cat_vol_nlmus.m
M       tbx_cfg_cat.m

(1)  Fixed:   Write MAT file before XML file in cat_io_xml to catch XML writing
              errors, e.g. on server.
(2)  Fixed:   Move "printCATreport" settings behind QA and XML report output.
(3)  Fixed:   Corrections in internal NLM-interpolation "cat_vol_nlmus".
(4)  Fixed:   Updated NLM filter options, resolution options, and intensity
              limits in cat_run_job1070 based on changes of in cat_run_job.   
(5)  Update:  Changed of ultra high resolution scripts (cat_conf_tools and 
              cat_vol_urqio. 
(6)  Fixed:   Small corrections/modifications in cat_io_cmd.
(7)  Fixed:   Surface processing do not require Shooting/Dartel registration
              Developer options for fast surface processing in cat_surf_createCS.
(8)  Fixed:   Corrections (rigid vs. affine shooting) and cleanup in 
              cat_main_registration. 